--- a/package.json
+++ b/package.json
@@ -5,30 +5,43 @@
   "main": "out/app.js",
   "type": "module",
   "scripts": {
+    "start": "tsx watch src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "tsc -w",
-    "start": "node ."
+    "watch": "tsc -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@colyseus/monitor": "^0.15.0",
+    "@colyseus/playground": "^0.15.3",
+    "@colyseus/tools": "^0.15.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "5.2.0",
-    "@types/express": "^4.17.17",
+    "colyseus": "^0.15.7",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^4.0.2",
     "sequelize": "^6.32.1",
     "sequelize-typescript": "^2.1.5",
+    "tslib": "^2.6.2",
     "ws": "^8.13.0"
   },
   "devDependencies": {
+    "@colyseus/loadtest": "^0.15.0",
+    "@colyseus/testing": "^0.15.0",
+    "@types/express": "^4.17.1",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^20.5.7",
     "@types/ws": "^8.5.5",
-    "prisma": "^5.2.0"
+    "mocha": "^10.2.0",
+    "prisma": "^5.2.0",
+    "rimraf": "^5.0.0",
+    "tsx": "^3.12.6",
+    "typescript": "^5.0.4"
   },
   "imports": {
     "#*": "./out/*.js"
