--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^4.0.2",
+    "ngraph.graph": "^20.0.1",
+    "ngraph.path": "^1.5.0",
     "sequelize": "^6.32.1",
     "sequelize-typescript": "^2.1.5",
     "tslib": "^2.6.2",
@@ -33,6 +35,7 @@
   "devDependencies": {
     "@colyseus/loadtest": "^0.15.0",
     "@colyseus/testing": "^0.15.0",
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mocha": "^10.0.1",
