updated mapChanged broadcast message

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "tsx watch src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc -w",
-    "generate-schema": "npx schema-codegen src/colyseus/schema/* --output data/schema/ --csharp --namespace UFB.StateSchema"
+    "generate-schema": "npx schema-codegen src/colyseus/schema/* --output ../Assets/Scripts/Network/Schema --csharp --namespace UFB.StateSchema"
   },
   "keywords": [],
   "author": "",
