--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "tsx watch src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc -w",
-    "generate-schema": "npx schema-codegen src/colyseus/schema/* --output ../Assets/Scripts/Network/Schema --csharp --namespace UFB.StateSchema"
+    "generate-schema": "npx schema-codegen src/colyseus/schema/* --output data/schema --csharp --namespace UFB.StateSchema"
   },
   "keywords": [],
   "author": "",
@@ -41,6 +41,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.5.7",
+    "@types/uuid": "^9.0.3",
     "@types/ws": "^8.5.5",
     "mocha": "^10.2.0",
     "prisma": "^5.2.0",
