schema update; move message handling update

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "tsx watch src/app.ts",
+    "kyle-dev": "API_PORT=4953 tsx watch src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc -w",
     "generate-schema": "npx schema-codegen src/colyseus/schema/* --output data/schema --csharp --namespace UFB.StateSchema"
