additional script to generate schema for client

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "kyle-dev": "API_PORT=4953 tsx watch src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc -w",
-    "generate-schema": "npx schema-codegen src/colyseus/schema/* --output data/schema --csharp --namespace UFB.StateSchema"
+    "generate-schema": "npx schema-codegen src/colyseus/schema/* --output data/schema --csharp --namespace UFB.StateSchema",
+    "generate-schema-client": "npx schema-codegen src/colyseus/schema/* --output ../Assets/Scripts/Network/Schema --csharp --namespace UFB.StateSchema"
   },
   "keywords": [],
   "author": "",
