updating db schema to include nfts; adding scripts to update db from blockchain

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "generate-schema": "npx schema-codegen src/game/schema/* --output data/schema --csharp --namespace UFB.StateSchema",
     "generate-schema-client": "npx schema-codegen src/game/schema/* --output ../Assets/Scripts/Network/Schema --csharp --namespace UFB.StateSchema",
     "job:insert-maps": "node out/jobs/insert-maps.js",
+    "job:insert-characters": "node out/jobs/insert-characters.js",
     "start:service": "pm2 stop ufb-server; pm2 start out/app.js --name ufb-server",
     "stop:service": "pm2 stop ufb-server"
   },
@@ -25,9 +26,13 @@
     "@colyseus/tools": "^0.15.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "5.2.0",
+    "@types/axios": "^0.14.0",
+    "alchemy-sdk": "^3.0.0",
     "aws-sdk": "^2.1453.0",
+    "axios": "^1.6.2",
     "colyseus": "^0.15.7",
     "dotenv": "^16.3.1",
+    "ethers": "^6.9.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
