--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "generate-schema": "npx schema-codegen src/game/schema/* --output data/schema --csharp --namespace UFB.StateSchema",
     "generate-schema-client": "npx schema-codegen src/game/schema/* --output ../Assets/Scripts/Network/Schema --csharp --namespace UFB.StateSchema",
     "job:insert-maps": "node out/jobs/insert-maps.js",
-    "job:insert-characters": "node out/jobs/insert-characters.js",
+    "job:update-characters": "node out/jobs/update-characters.js",
     "start:service": "pm2 stop ufb-server; pm2 start out/app.js --name ufb-server",
     "stop:service": "pm2 stop ufb-server"
   },
