fix some errors

--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
     "@colyseus/tools": "^0.15.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "5.2.0",
-    "@types/axios": "^0.14.0",
     "alchemy-sdk": "^3.0.0",
     "aws-sdk": "^2.1453.0",
-    "axios": "^1.6.2",
+    "axios": "^1.6.8",
     "colyseus": "^0.15.7",
     "dotenv": "^16.3.1",
     "ethers": "^6.9.0",
@@ -48,8 +47,10 @@
   "devDependencies": {
     "@colyseus/loadtest": "^0.15.0",
     "@colyseus/testing": "^0.15.0",
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.14",
-    "@types/express": "^4.17.1",
+    "@types/express": "^4.17.21",
+    "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.5.7",
