--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "ESNext",
     "lib": ["ESNext", "esnext.asynciterable"],
     "typeRoots": ["node_modules/#types"],
+    "types": ["@prisma/client"],
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
