--- a/tools/map-tool/package.json
+++ b/tools/map-tool/package.json
@@ -5,6 +5,7 @@
     "main": "out/parseMap.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "tsc -p .",
         "parse-map": "node ./out/parseMap.js",
         "tsc-watch": "npx tsc-watch"
     },
