--- a/tools/map-tool/package.json
+++ b/tools/map-tool/package.json
@@ -7,6 +7,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc -p .",
         "parse-map": "node ./out/parseMap.js",
+        "parse-3d-map": "node ./out/parse-map-3d.js",
         "tsc-watch": "npx tsc-watch"
     },
     "author": "Carl Moore",
