--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "alchemy-sdk": "^3.0.0",
     "aws-sdk": "^2.1453.0",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "colyseus": "^0.15.7",
     "dotenv": "^16.3.1",
     "ethers": "^6.9.0",
@@ -48,6 +49,7 @@
     "@colyseus/loadtest": "^0.15.0",
     "@colyseus/testing": "^0.15.0",
     "@types/axios": "^0.14.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.21",
     "@types/express-validator": "^3.0.0",
